--- a/index.html
+++ b/index.html
@@ -3,46 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>budgetTracker</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <h1 class="heading">Income Expense Calculator</h1>
-      <div class="transaction">
-        <div class="totalAmount">Total Income: <span id="income">0</span></div>
-        <div class="totalAmount">Total Expanse: <span id="Expanse">0</span></div>
-        <div class="totalAmount">Net balance: <span id="Net">0</span></div>
+    <div id="wrapper">
+      <header>
+        <h1 class="heading">Income Expense Calculator</h1>
+        <!-- totalAmount showing part -->
+        <div class="transaction">
+          <div class="totalAmount">
+            Total Income: <span id="income">0</span>
+          </div>
+          <div class="totalAmount">
+            Total Expanse: <span id="Expanse">0</span>
+          </div>
+          <div class="totalAmount">Net balance: <span id="Net">0</span></div>
+        </div>
+      </header>
+      <!-- radio button filters -->
+      <div class="filters">
+        <label>
+          <input type="radio" name="filter" value="all" checked /> All</label
+        >
+        <label
+          ><input type="radio" name="filter" value="income" /> Income</label
+        >
+
+        <label
+          ><input type="radio" name="filter" value="expense" /> Expense</label
+        >
       </div>
-    </header>
-    <!-- radio button filters -->
-    <div class="filters">
-      <label>
-        <input type="radio" name="filter" value="all" checked /> All</label>
-      <label><input type="radio" name="filter" value="income" /> Income</label>
-      
-      <label><input type="radio" name="filter" value="expense" /> Expense</label>
+      <!-- adding entries -->
+      <div class="form">
+        <select id="type" class="input-field">
+          <option value="income">Income</option>
+          <option value="expense">Expense</option>
+        </select>
+        <input
+          type="text"
+          id="description"
+          class="input-field"
+          placeholder="Description"
+        />
+        <input
+          type="number"
+          id="amount"
+          class="input-field"
+          placeholder="Amount"
+        />
+        <button id="add-btn" class="add-button">Add</button>
+      </div>
+      <!--entry list -->
+      <table id="table">
+        <tr>
+          <th>#</th>
+          <th>Description</th>
+          <th>Amount</th>
+          <th>Type</th>
+          <th>Delete</th>
+          <th>Edit</th>
+      </tr>
+      </table>
     </div>
-    <!-- adding entries -->
-    <div class="form">
-      <select id="type" class="input-field">
-        <option value="income">Income</option>
-        <option value="expense">Expense</option>
-      </select>
-      <input
-        type="text"
-        id="description"
-        class="input-field"
-        placeholder="Description"
-      />
-      <input
-        type="number"
-        id="amount"
-        class="input-field"
-        placeholder="Amount"
-      />
-      <button id="add-btn" class="add-button">Add</button>
-    </div>
-    <!--entry list -->
-    <ul id="entriesList"></ul>
+    <script src="script.js"></script>
   </body>
 </html>
